--- a/learntocode.html
+++ b/learntocode.html
@@ -24,7 +24,7 @@
      header.masthead {
   padding-top: 1rem;
   padding-bottom: calc(10rem - 56px);
-  background-image: url("D:/Downloads/update 11-1-2018/proj/startbootstrap-creative-gh-pages/Slide1.JPG");
+  background-image: url("Slide1.JPG");
   background-position: center center;
   -webkit-background-size: contain;
   -moz-background-size: contain;
